samples/_failures_safe/1761404646_78b442_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3a7f5ec.c: In function ‘main’:
./samples/SAFE/__tmp_e3a7f5ec.c:152:12: error: missing terminating " character
  152 |     printf("Final
      |            ^~~~~~
./samples/SAFE/__tmp_e3a7f5ec.c:152:5: error: expected expression at end of input
  152 |     printf("Final
      |     ^~~~~~
./samples/SAFE/__tmp_e3a7f5ec.c:152:5: error: expected declaration or statement at end of input
